Expondo para o frontend: Registro da chave Pix

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 micronaut:
   application:
     name: keyManagerRest
+
+grpc:
+  client:
+    plaintext: true
+    max-retry-attempts: 10
+  channels:
+    hello-world:
+      address: 'localhost:50051'
+      plaintext: true
+      max-retry-attempts: 10
+    keyManager:
+      address: '${KEY_MANAGER_HOST:localhost}:${KEY_MANAGER_PORT:50051}'
