--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id("com.github.johnrengelman.shadow") version "7.0.0"
     id("io.micronaut.application") version "2.0.3"
     id("org.jetbrains.kotlin.plugin.allopen") version "1.5.21"
+    id("org.jetbrains.kotlin.plugin.jpa") version "1.4.32"
     id("com.google.protobuf") version "0.8.15"
 }
 
@@ -24,21 +25,34 @@ micronaut {
 }
 
 dependencies {
-    kapt("io.micronaut:micronaut-http-validation")
+    kapt('io.micronaut.data:micronaut-data-processor:2.5.0')
+
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
     implementation("javax.annotation:javax.annotation-api")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut.grpc:micronaut-grpc-client-runtime")
-
-    annotationProcessor("io.micronaut:micronaut-inject-java")
+    implementation("io.micronaut:micronaut-http-validation")
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
+    runtimeOnly("ch.qos.logback:logback-classic")
 
+    // Testes
+    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
+    testImplementation("org.mockito:mockito-core:3.8.0")
+    testImplementation("io.micronaut:micronaut-http-client")
+    testImplementation('org.mockito:mockito-inline:3.11.2')
+    testImplementation("io.micronaut:micronaut-http")
+
+//    testImplementation("org.junit.jupiter:junit-jupiter-api")
+//    testImplementation("io.micronaut.test:micronaut-test-junit5:2.3.7")
+//    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+//    testImplementation("org.mockito:mockito-core:3.+")
+//    testImplementation("org.mockito:mockito-inline:3.+")
+//    testImplementation("org.assertj:assertj-core:3.6.1")
 }
 
 
